turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:15: error: ')' expected but ';' found.
			setCouleurBrosse(colors(place(x,colors)); baisseBrosse(); leveBrosse(); droite();avance()
                                                                ^LangtonsAnt:17: error: ')' expected but ';' found.
			setCouleurBrosse(colors(place(x,colors)); baisseBrosse(); leveBrosse(); gauche();avance()
                                                                ^LangtonsAnt:19: error: ')' expected but '}' found.
}
^